hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__resolve_ref_to_let_fn.snap
---
source: hir/src/passes/resolver.rs
expression: hir
---
Hir {
    identifiers: [
        IdentId(0) => "x",
        IdentId(1) => "add",
        IdentId(2) => "boolean",
        IdentId(3) => "div",
        IdentId(4) => "eq",
        IdentId(5) => "ge",
        IdentId(6) => "gt",
        IdentId(7) => "le",
        IdentId(8) => "lt",
        IdentId(9) => "mul",
        IdentId(10) => "neg",
        IdentId(11) => "neq",
        IdentId(12) => "number",
        IdentId(13) => "print",
        IdentId(14) => "string",
        IdentId(15) => "sub",
        IdentId(16) => "void",
    ],
    identifier_refs: [
        IdentRefId(0) => IdentifierRef {
            id: IdentRefId(0),
            ident: Identifier {
                id: IdentId(0),
                span: 1:15; [14, 15],
                bound: Bound(21),
            },
        },
    ],
    expressions: [
        ExprId(0) => Expression {
            id: ExprId(0),
            kind: Block(
                [
                    StmtId(2),
                ],
            ),
            span: 1:11; [10, 13],
            typed: Typed(2),
        },
        ExprId(1) => Expression {
            id: ExprId(1),
            kind: FunctionCall(
                IdentRefId(0),
                [],
            ),
            span: 1:15; [14, 17],
            typed: Typed(1),
        },
    ],
    statements: [
        StmtId(0) => Statement {
            id: StmtId(0),
            kind: LetFn(
                Identifier {
                    id: IdentId(0),
                    span: 1:5; [4, 5],
                    bound: Bound(21),
                },
                [],
                [],
                Return {
                    type_def_id: None,
                    typed: Typed(1),
                },
                Provided(
                    ExprId(0),
                ),
            ),
            span: 1:1; [0, 13],
        },
        StmtId(1) => Statement {
            id: StmtId(1),
            kind: Expression(
                ExprId(1),
            ),
            span: 1:15; [14, 18],
        },
        StmtId(2) => Statement {
            id: StmtId(2),
            kind: Ret(
                None,
                Implicit,
            ),
            span: 1:11; [10, 13],
        },
    ],
    type_defs: [],
    roots: [
        StmtId(0),
        StmtId(1),
    ],
    symbols: [
        SymbolId(0) => Symbol {
            id: SymbolId(0),
            kind: NotFound,
            type_id: TypeId(0),
        },
        SymbolId(1) => Symbol {
            id: SymbolId(1),
            kind: NativeType(
                IdentId(16),
                Void,
            ),
            type_id: TypeId(2),
        },
        SymbolId(2) => Symbol {
            id: SymbolId(2),
            kind: NativeType(
                IdentId(14),
                String,
            ),
            type_id: TypeId(2),
        },
        SymbolId(3) => Symbol {
            id: SymbolId(3),
            kind: NativeType(
                IdentId(12),
                Number,
            ),
            type_id: TypeId(2),
        },
        SymbolId(4) => Symbol {
            id: SymbolId(4),
            kind: NativeType(
                IdentId(2),
                Boolean,
            ),
            type_id: TypeId(2),
        },
        SymbolId(5) => Symbol {
            id: SymbolId(5),
            kind: Native(
                IdentId(15),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                SubNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(6) => Symbol {
            id: SymbolId(6),
            kind: Native(
                IdentId(13),
                [
                    TypeId(5),
                ],
                TypeId(1),
                PrintString,
            ),
            type_id: TypeId(7),
        },
        SymbolId(7) => Symbol {
            id: SymbolId(7),
            kind: Native(
                IdentId(13),
                [
                    TypeId(4),
                ],
                TypeId(1),
                PrintNumber,
            ),
            type_id: TypeId(8),
        },
        SymbolId(8) => Symbol {
            id: SymbolId(8),
            kind: Native(
                IdentId(13),
                [
                    TypeId(3),
                ],
                TypeId(1),
                PrintBoolean,
            ),
            type_id: TypeId(9),
        },
        SymbolId(9) => Symbol {
            id: SymbolId(9),
            kind: Native(
                IdentId(11),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                NeqNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(10) => Symbol {
            id: SymbolId(10),
            kind: Native(
                IdentId(11),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                NeqBooleanBoolean,
            ),
            type_id: TypeId(11),
        },
        SymbolId(11) => Symbol {
            id: SymbolId(11),
            kind: Native(
                IdentId(10),
                [
                    TypeId(4),
                ],
                TypeId(4),
                NegNumber,
            ),
            type_id: TypeId(12),
        },
        SymbolId(12) => Symbol {
            id: SymbolId(12),
            kind: Native(
                IdentId(9),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                MulNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(13) => Symbol {
            id: SymbolId(13),
            kind: Native(
                IdentId(8),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LtNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(14) => Symbol {
            id: SymbolId(14),
            kind: Native(
                IdentId(7),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                LeNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(15) => Symbol {
            id: SymbolId(15),
            kind: Native(
                IdentId(6),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GtNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(16) => Symbol {
            id: SymbolId(16),
            kind: Native(
                IdentId(5),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                GeNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(17) => Symbol {
            id: SymbolId(17),
            kind: Native(
                IdentId(4),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
                EqNumberNumber,
            ),
            type_id: TypeId(10),
        },
        SymbolId(18) => Symbol {
            id: SymbolId(18),
            kind: Native(
                IdentId(4),
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
                EqBooleanBoolean,
            ),
            type_id: TypeId(11),
        },
        SymbolId(19) => Symbol {
            id: SymbolId(19),
            kind: Native(
                IdentId(3),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                DivNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(20) => Symbol {
            id: SymbolId(20),
            kind: Native(
                IdentId(1),
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
                AddNumberNumber,
            ),
            type_id: TypeId(6),
        },
        SymbolId(21) => Symbol {
            id: SymbolId(21),
            kind: LetFn(
                IdentId(0),
                StmtId(0),
                [],
                TypeId(1),
            ),
            type_id: TypeId(13),
        },
    ],
    types: [
        TypeId(0) => Invalid,
        TypeId(1) => Void,
        TypeId(2) => None,
        TypeId(3) => Boolean,
        TypeId(4) => Number,
        TypeId(5) => String,
        TypeId(6) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(4),
        ),
        TypeId(7) => Function(
            [
                TypeId(5),
            ],
            TypeId(1),
        ),
        TypeId(8) => Function(
            [
                TypeId(4),
            ],
            TypeId(1),
        ),
        TypeId(9) => Function(
            [
                TypeId(3),
            ],
            TypeId(1),
        ),
        TypeId(10) => Function(
            [
                TypeId(4),
                TypeId(4),
            ],
            TypeId(3),
        ),
        TypeId(11) => Function(
            [
                TypeId(3),
                TypeId(3),
            ],
            TypeId(3),
        ),
        TypeId(12) => Function(
            [
                TypeId(4),
            ],
            TypeId(4),
        ),
        TypeId(13) => Function(
            [],
            TypeId(1),
        ),
    ],
    exit_points: ExitPoints {
        exit_points: {
            ExprId(0): [
                Implicit(
                    None,
                ),
            ],
        },
        unreachable: [],
    },
}
